# SENAI-desafio-saep

./: .gitignore  MakeFIle  README.md
desafio/: pyproject.toml
desafio/app/: forms.py  models.py
desafio/app/static/css/: style.css
desafio/app/templates/global/: base.html
desafio/app/templates/tarefas/: atualizar_tarefa.html  cadastrar_tarefa.html  gerenciar_tarefas.html
desafio/app/templates/usuarios/: cadastrar_usuario.html
desafio/app/views/: base.py  usuario_views.py
desafio/projeto/: settings.py
docs/: Banco de Dados.sql
projeto/: .env
projeto/app/: enums.py  urls.py
projeto/app/static/js/: script.js
projeto/app/templates/: home.html
projeto/app/templates/partial/: header.html
projeto/app/views/: __init__.py  tarefa_views.py
